[project]
name = "status-page"
version = "0.1.0"
description = "Docker-able YAML-configured status page using FastHTML"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dnspython>=2.7.0",
    "httpx>=0.28.1",
    "pyyaml>=6.0.2",
    "python-fasthtml>=0.12.50",
    "uvicorn>=0.34.0",
    "certifi>=2026.2.25",
]

[project.scripts]
status-page = "status_page.app:main"

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"
